tests/ui/attributes/unused-item-in-attr.stderr
error: unexpected expression: `{
           extern crate alloc;
       }`
  --> $DIR/unused-item-in-attr.rs:1:7
   |
LL | #[w = { extern crate alloc; }]
   |       ^^^^^^^^^^^^^^^^^^^^^^^

error: cannot find attribute `w` in this scope
  --> $DIR/unused-item-in-attr.rs:1:3
   |
LL | #[w = { extern crate alloc; }]
   |   ^

error: aborting due to 2 previous errors

